--- a/StatsWidgetsExtension.entitlements
+++ b/StatsWidgetsExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.eppp.widgets</string>
+		<string>group.eppp.widget</string>
 	</array>
 </dict>
 </plist>
